[gd_scene load_steps=15 format=3 uid="uid://bhu40cjsplpqc"]

[ext_resource type="Script" uid="uid://3oea1stjchxl" path="res://Scripts/Enemies/Enemy_Squid.gd" id="1_fwcaj"]
[ext_resource type="Texture2D" uid="uid://d1tkhnl33xj5k" path="res://Sprites/Enemies/squid-sprite.png" id="1_rpcwj"]
[ext_resource type="Texture2D" uid="uid://dyqeb36ox6iv0" path="res://Sprites/Player/PlayerShadow.png" id="1_xs40p"]
[ext_resource type="PackedScene" uid="uid://bk8lm4skrcx1f" path="res://Scenes/Ink.tscn" id="2_oh473"]
[ext_resource type="AudioStream" uid="uid://bpw5hpam3lt6q" path="res://Audios/hit.ogg" id="5_a6kb6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oh473"]
radius = 18.0
height = 50.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xs40p"]
atlas = ExtResource("1_rpcwj")
region = Rect2(50, 0, 233, 1012)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwcaj"]
atlas = ExtResource("1_rpcwj")
region = Rect2(283, 0, 233, 1012)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh473"]
atlas = ExtResource("1_rpcwj")
region = Rect2(516, 0, 233, 1012)

[sub_resource type="AtlasTexture" id="AtlasTexture_76etv"]
atlas = ExtResource("1_rpcwj")
region = Rect2(749, 0, 233, 1012)

[sub_resource type="SpriteFrames" id="SpriteFrames_fi2k0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs40p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwcaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh473")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76etv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xs40p"]
radius = 86.023254

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_psr6c"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a6kb6"]
radius = 9.0
height = 22.0

[node name="Squid" type="CharacterBody2D"]
script = ExtResource("1_fwcaj")
ink_scene = ExtResource("2_oh473")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_oh473")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-6.82121e-13, 13.000001)
scale = Vector2(1.9027781, 2.8194447)
texture = ExtResource("1_xs40p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -37)
scale = Vector2(0.1722103, 0.14006917)
sprite_frames = SubResource("SpriteFrames_fi2k0")
animation = &"idle"
autoplay = "idle"
frame = 2
frame_progress = 0.4170923

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_xs40p")

[node name="ChangeDirTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="InkSpawnPoint" type="Marker2D" parent="." groups=["Enemy"]]

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(0, -18)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 18)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_psr6c")
debug_color = Color(0.7490196, 0.4627451, 0, 0.3137255)

[node name="AudioStreamPlayer_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_a6kb6")

[node name="AttackHitbox" type="Area2D" parent="." groups=["Enemy"]]
rotation = 1.5707964
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
modulate = Color(0.8618463, 2.8878452e-07, 0.49752194, 1)
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_a6kb6")
debug_color = Color(0.8478625, 0.0009508711, 0.90637434, 0.41960785)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="ChangeDirTimer" to="." method="_on_change_dir_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_area_entered"]
